--- a/styles.css
+++ b/styles.css
@@ -28,21 +28,44 @@ body {
 }
 
 .productimage {
-    min-width: 600px;
-    width: 30%;
+    min-width: 700px;
+    width: 40%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     border-radius: 10px;
 }
 
-.perfume-image {
+.mobileimage {
+    object-fit: cover;
+    width: 85%;
+    background-position: center;
+    background-size: cover;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    justify-content: center;
+    margin-left: 60px;
+
+}
+
+/*.perfume-image {
     width: 55%;
     background-position: center;
     background-size: cover;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 
+}*/
+
+.picture {
+    object-fit: cover;
+    width: 55%;
+    background-position: center;
+    background-size: cover;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 .advert {
@@ -53,6 +76,7 @@ body {
     row-gap: 15x;
     padding: 20px 40px;
     gap: 10px;
+    margin: 0;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -62,11 +86,17 @@ h1 {
     font-weight: 700;
 }
 
-p {
+p,
+del {
     font-family: Montserrat, sans-serif;
     font-weight: 500;
     color: var(--dark-grayish-blue);
 
+}
+
+.advert-title {
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
 .pricelist {
@@ -108,21 +138,27 @@ p {
     display: none;
 }
 
-@media all and (max-width: 900px) {
-    .perfume-image {
+@media all and (max-width: 600px) {
+    /*.perfume-image {
         display: none;
-    }
+    }*/
 
     .productimage {
+        min-width: 500px;
+        width: 60%;
+        margin: 0 auto 0 0;
         display: block;
-        align-items: center;
+        flex-direction: row;
         justify-content: center;
+        align-items: center;
+        border-radius: 10px;
     }
 
-    .perfume-mobile {
+    .mobileimage {
         display: flex;
         width: 60%;
         background-position: center;
+        margin-left: 100px;
         background-size: cover;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
@@ -132,7 +168,7 @@ p {
     .advert {
         background-color: var(--white);
         width: 60%;
-        display: flex;
+        display: block;
         flex-direction: column;
         row-gap: 15x;
         padding: 20px 40px;
